builder.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko
  namespace: jenkins	
spec:
  containers:
  # - name: gcloud_kubectl
  #   image: kiwigrid/gcloud-kubectl-helm
  #   tty: true
  - name: kubectlkubectl
    image: kleverio/gcloud-kubectl:v0.0.1
    # command:
    # - /bin/cat
    tty: true    
  - name: kaniko
    image: gcr.io/kaniko-project/executor:debug
    command:
    - /busybox/cat
    tty: true
    volumeMounts:
      - name: kaniko-secret
        mountPath: /kaniko/.docker
  volumes:
    - name: kaniko-secret
      secret:
        secretName: regcred
        items:
          - key: .dockerconfigjson
            path: config.json
